# DanmakuFactory

.github/workflows/: flutter_release_android.yml  flutter_release_harmony.yml  flutter_release_linux.yml  flutter_release_mac.yml  flutter_release_windows.yml
gui/danmakufactory_flutter/: Readme.md  pubspec.yaml
gui/danmakufactory_flutter/danmakufactory/macos/: danmakufactory.podspec
gui/danmakufactory_flutter/danmakufactory/src/: CMakeLists.txt
gui/danmakufactory_flutter/danmakufactory/src/cmake/: copy_danmaku_factory_core.cmake
gui/danmakufactory_flutter/danmakufactory/src/xmake/: xmake.lua
gui/danmakufactory_flutter/lib/ui/screen/main/home/provider/: home_provider.dart
